Add : main, login 페이지 추가

--- a/src/pages/sunyeongSin/Main/Main.scss
+++ b/src/pages/sunyeongSin/Main/Main.scss
@@ -1,3 +1,20 @@
-h1 {
-  font-size: 1rem;
+body{
+    margin: 0;
 }
+
+
+.main{
+    width: 100vw;
+    margin: 0 auto;
+    margin-top: 7vh; 
+    background-color: #FAFAFA;
+    
+}
+
+
+/* 
+@media(max-width:1500px) { 
+    aside {  
+        display:none;  
+    } 
+} */
