Add: 검색 아이콘 숨김 기능 추가 - 검색창 포커스되면 검색 아이콘 숨김(hidden 클래스 추가) - 검색창 포커스 아웃되면 검색 아이콘 보임(hidden 클래스 제거)

--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -1,5 +1,9 @@
 @import '../../styles/common.scss';
 
+.hidden {
+  display: none;
+}
+
 /* nav */
 .Nav {
   position: relative;
@@ -30,7 +34,7 @@
       }
 
       /* 검색창 */
-      .search {
+      .Search {
         position: relative;
 
         input {
