--- a/src/pages/shinung/Main/Feed/Feed.scss
+++ b/src/pages/shinung/Main/Feed/Feed.scss
@@ -146,14 +146,18 @@
   font-size: 14px;
   color: #a1a1a1;
   cursor: pointer;
-  display: none;
+  opacity: 0;
   position: absolute;
   right: 43px;
 }
 
+.feed .comment:hover .comment--delete {
+  opacity: 1;
+}
+
 .feed .comment .like {
   width: 22px;
-  color: #a1a1a1;
+  // color: #a1a1a1;
   cursor: pointer;
   margin-right: 15px;
 }
@@ -165,9 +169,9 @@
   margin-right: 15px;
 }
 
-.feed .comment .none {
-  display: none;
-}
+// .feed .comment .none {
+//   display: none;
+// }
 
 /* Comment input */
 .feeds .add {
