--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -1,3 +1,24 @@
+@import './variables.scss';
+
 * {
   box-sizing: border-box;
+}
+
+body {
+  background-color: $gray1;
+  margin: 0;
+}
+
+a {
+  color: unset;
+  text-decoration: none;
+}
+
+input:focus {
+  outline: none;
+}
+
+button {
+  all: unset;
+  cursor: pointer;
 }
