--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,6 +1,11 @@
 $gray1: #fafafa;
 $gray2: #dbdbdb;
-$desktop-nav-height: 60px;
+$gray3: #777777;
+$lightblue: #c4e1fb;
+$blue: #0095f6;
+$darkblue: #0b3d6f;
+$nav-height: 60px;
+$nav-max-width: 935px;
 
 %logo {
   font-family: 'Lobster', cursive;
@@ -9,9 +14,15 @@ $desktop-nav-height: 60px;
 
 @mixin wrapper-width {
   width: 100%;
-  max-width: 935px;
+  max-width: $nav-max-width;
 }
 
 @mixin border-gray {
   border: 1px solid $gray2;
+}
+
+@mixin media-nav-width {
+  @media (max-width: $nav-max-width) {
+    @content;
+  }
 }
