--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -1,4 +1,4 @@
-@import '../../styles/variables.scss';
+@import '../../styles/common.scss';
 
 /* nav */
 .Nav {
@@ -16,17 +16,21 @@
 
     .nav-wrapper {
       @include wrapper-width;
+      @include media-nav-width {
+        max-width: 614px;
+      }
+
       display: flex;
       flex-direction: row;
       align-items: center;
       justify-content: space-between;
-      height: $desktop-nav-height;
+      height: $nav-height;
       padding: 14px 0 12px;
       margin: auto;
 
       .logo {
         @extend %logo;
-        font-size: 2.5rem;
+        font-size: 25px;
       }
 
       /* 검색창 */
@@ -49,11 +53,11 @@
 
         i.fa-search {
           position: absolute;
-          top: 10px;
+          top: 50%;
           left: 12px;
-          width: 8px;
-          height: 8px;
+          transform: translateY(-50%);
           color: $gray2;
+          font-size: 14px;
         }
       }
 
