--- a/src/pages/sunyeongSin/Main/Main.scss
+++ b/src/pages/sunyeongSin/Main/Main.scss
@@ -1,16 +1,13 @@
-body{
-    margin: 0;
+body {
+  margin: 0;
 }
 
-
-.main{
-    width: 100vw;
-    margin: 0 auto;
-    margin-top: 7vh; 
-    background-color: #FAFAFA;
-    
+.main {
+  width: 100vw;
+  margin: 0 auto;
+  margin-top: 7vh;
+  background-color: #fafafa;
 }
-
 
 /* 
 @media(max-width:1500px) { 
