--- a/src/pages/jumiLee/Main/Main.scss
+++ b/src/pages/jumiLee/Main/Main.scss
@@ -1,3 +1,18 @@
-h1 {
-  font-size: 1rem;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+main {
+  background-color: #fafafa;
+  display: flex;
+  height: 170vh;
+  justify-content: center;
+  padding-top: 150px;
+  .main-right {
+    display: flex;
+    flex-direction: column;
+    margin-left: 50px;
+  }
 }
