Add: 피드, 댓글 mock data 생성 및 적용 - dataKyeom.json 파일에 mock data 생성 (피드, 댓글 데이터) - fetch로 데이터를 불러와 피드와 댓글을 동적으로 생성하는 기능 구현 - /images/kyeom/에 피드 이미지 추가 - Feeds와 Feed 컴포넌트 분리 - Feeds.scss 속성 수정 - Aside left 조절할 때 useEffect 사용

--- a/src/pages/kyeom/Main/Feeds/Feeds.scss
+++ b/src/pages/kyeom/Main/Feeds/Feeds.scss
@@ -1,14 +1,17 @@
 @import '../Main.scss';
 
-.Feed {
+.Feeds {
+  display: flex;
+  flex-direction: column;
   margin-right: 28px;
   @include media-nav-width {
     margin-right: 0;
   }
 
-  .feed-wrapper {
+  .Feed {
     @include border-gray;
     max-width: 614px;
+    margin-bottom: 24px;
     background-color: white;
 
     section:not(.feed-img) {
@@ -76,7 +79,7 @@
 
 /* 피드 내용 */
 section.content {
-  margin-bottom: 12px;
+  margin-bottom: 16px;
 
   .name {
     margin-right: 8px;
