--- a/src/pages/shinung/Login/Login.scss
+++ b/src/pages/shinung/Login/Login.scss
@@ -18,15 +18,15 @@ main {
   justify-content: center;
   /* margin-top: 45px; */
   margin-bottom: 50px;
+
+  .main-img {
+    width: 380px;
+    margin-right: 23px;
+    margin-left: 15px;
+  }
 }
 
-.main__img {
-  width: 380px;
-  margin-right: 23px;
-  margin-left: 15px;
-}
-
-.login--form {
+.login-form {
   margin-top: 20px;
 }
 
@@ -40,43 +40,43 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-}
 
-.login--title {
-  font-family: 'Lobster', cursive;
-  font-size: 50px;
-  margin: 5px 0 35px 0;
-  font-weight: 100;
-}
+  .title {
+    font-family: 'Lobster', cursive;
+    font-size: 50px;
+    margin: 5px 0 35px 0;
+    font-weight: 100;
+  }
 
-.login input {
-  border: 1px solid #d6d6d6;
-  background-color: #fafafa;
-  width: 270px;
-  padding: 10px;
-  border-radius: 3px;
-  margin-bottom: 5px;
-}
+  input {
+    border: 1px solid #d6d6d6;
+    background-color: #fafafa;
+    width: 270px;
+    padding: 10px;
+    border-radius: 3px;
+    margin-bottom: 5px;
+  }
 
-.login input::placeholder {
-  color: #949494;
-}
+  input::placeholder {
+    color: #949494;
+  }
 
-.login--button {
-  width: 270px;
-  padding: 8px;
-  border: none;
-  border-radius: 5px;
-  background-color: #0096f7;
-  opacity: 0.5;
-  color: white;
-  text-align: center;
-  margin: 10px 0;
-  font-weight: bold;
+  .login-btn {
+    width: 270px;
+    padding: 8px;
+    border: none;
+    border-radius: 5px;
+    background-color: #0096f7;
+    opacity: 0.5;
+    color: white;
+    text-align: center;
+    margin: 10px 0;
+    font-weight: bold;
+  }
 }
 
 /* Notice */
-.login--notice {
+.login-notice {
   height: 13px;
   font-size: 13px;
   margin: 0;
@@ -90,21 +90,21 @@ main {
   width: 268px;
   justify-content: center;
   align-items: center;
-}
 
-.separate--line {
-  width: 100px;
-  height: 1px;
-  background-color: #d6d6d6;
-}
+  .separate-line {
+    width: 100px;
+    height: 1px;
+    background-color: #d6d6d6;
+  }
 
-.separate--text {
-  margin: 0 20px;
-  color: #888888;
+  .separate-text {
+    margin: 0 20px;
+    color: #888888;
+  }
 }
 
 /* Log-In with facebook */
-.login--facebook {
+.facebook {
   color: #354e83;
   background-color: transparent;
   border: none;
@@ -112,21 +112,20 @@ main {
   display: flex;
   align-items: center;
   margin-top: 10px;
-}
 
-.login--facebook p {
-  // margin-bottom: 9px;
-  cursor: pointer;
-}
+  img {
+    width: 15px;
+    margin-right: 5px;
+    cursor: pointer;
+  }
 
-.login--facebook img {
-  width: 15px;
-  margin-right: 5px;
-  cursor: pointer;
+  p {
+    cursor: pointer;
+  }
 }
 
 /* Forget password */
-.forget--password {
+.forget-password {
   color: #0c3e70;
   font-size: 12px;
   margin: auto;
@@ -165,19 +164,21 @@ main {
   align-items: center;
   width: 350px;
   height: 100px;
-}
 
-.download--app-store {
-  width: 136px;
-  height: 40px;
-  margin-right: 5px;
-}
+  img {
+    cursor: pointer;
+  }
 
-.download--google-play {
-  width: 134.28px;
-  height: 40px;
-}
+  div {
+    .app-store {
+      width: 136px;
+      height: 40px;
+      margin-right: 5px;
+    }
 
-.download img {
-  cursor: pointer;
+    .google-play {
+      width: 134.28px;
+      height: 40px;
+    }
+  }
 }
