--- a/src/pages/shinung/Main/Feed/Feed.scss
+++ b/src/pages/shinung/Main/Feed/Feed.scss
@@ -6,180 +6,177 @@
   background-color: white;
 }
 
-.main--right {
-  width: 300px;
-  height: 500px;
-  margin-top: 140px;
-  margin-left: 25px;
-  position: sticky;
-  top: 140px;
-}
-
 /* Feed */
-.feed .feed--user {
+.feed-user {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
   padding: 10px;
   height: 60px;
+
+  .user-info {
+    display: flex;
+    align-items: center;
+
+    .user-profile {
+      width: 40px;
+      border-radius: 50%;
+      margin: 0 10px 0 5px;
+    }
+  }
+
+  .feed-etc {
+    width: 15px;
+    margin-right: 10px;
+    margin-top: 0px;
+  }
 }
 
-.feed--user--info {
-  display: flex;
-  align-items: center;
-}
-
-.feed--user--info img {
-  width: 40px;
-  border-radius: 50%;
-  margin: 0 15px 0 10px;
-}
-
-.feed--user .etc {
-  width: 15px;
-  margin-right: 10px;
-  margin-top: 0px;
-}
-
-.feed--user--name {
+.user-name {
   font-weight: bold;
   cursor: pointer;
   margin-top: 5px;
 }
 
 /* Feed image */
-.feed .image {
+.feedImage {
   width: 598px;
   height: 600px;
   margin-bottom: -4px;
 }
 
 /* Feed evaluation */
-.feed .evaluation {
+.evaluation {
   display: flex;
   justify-content: space-between;
   align-items: center;
   height: 55px;
   margin-bottom: -5px;
-}
 
-.feed .evaluation div img {
-  width: 23px;
-  margin-left: 13px;
-  cursor: pointer;
-}
+  div img {
+    width: 23px;
+    margin-left: 13px;
+    cursor: pointer;
+  }
 
-.feed .evaluation .bookmark {
-  width: 23px;
-  margin-left: 12px;
-  cursor: pointer;
-  margin-right: 13px;
+  .bookmark {
+    width: 23px;
+    margin-left: 12px;
+    cursor: pointer;
+    margin-right: 13px;
+  }
 }
 
 /* Feed like */
-.feed .howmany {
+.howmany {
   display: flex;
   align-items: center;
   height: 30px;
   padding-bottom: 5px;
-}
 
-.feed .howmany img {
-  width: 25px;
-  border-radius: 50%;
-  border: 1px solid #e5e5e5;
-  margin: 0 5px 0 13px;
-  cursor: pointer;
-}
+  img {
+    width: 25px;
+    border-radius: 50%;
+    border: 1px solid #e5e5e5;
+    margin: 0 5px 0 13px;
+    cursor: pointer;
+  }
 
-.feed .howmany .howmany-text {
-  margin: 5px 0 0 2px;
-}
+  .howmany-text {
+    margin: 5px 0 0 2px;
 
-.feed .howmany a {
-  text-decoration: none;
-  font-weight: bold;
-  color: black;
+    a {
+      text-decoration: none;
+      font-weight: bold;
+      color: black;
+    }
+  }
 }
 
 /* Content */
-.feed .content {
+.content {
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 100%;
   padding: 8px 0;
   background-color: white;
-}
 
-.feeds .content--user,
-.comment--user {
-  margin: 0 0 0 15px;
-  font-weight: bold;
-  cursor: pointer;
-}
+  div {
+    .content-user {
+      margin: 0 0 0 15px;
+      font-weight: bold;
+      cursor: pointer;
+    }
 
-.content--text {
-  margin-left: 5px;
+    .content-text {
+      margin-left: 5px;
+    }
+  }
 }
 
 /* Comment */
-.feed .comments {
+.comments {
   padding: 0;
   margin: 0 0 5px 0;
-}
 
-.feed .comment {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  // padding: 2px 0;
-  background-color: white;
-  list-style: none;
-  position: relative;
-}
+  .comment {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    background-color: white;
+    list-style: none;
+    position: relative;
 
-.feed .comment div {
-  display: flex;
-  align-items: center;
-  height: 30px;
-}
+    div {
+      display: flex;
+      align-items: center;
+      height: 30px;
 
-.feed .comment .comment--text {
-  margin: 0 0 0 5px;
-  width: 370px;
-  word-wrap: break-word;
-}
+      .comment-user {
+        margin: 0 0 0 15px;
+        font-weight: bold;
+        cursor: pointer;
+      }
 
-.feed .comment .comment--delete {
-  width: 30px;
-  margin: 0;
-  font-size: 14px;
-  color: #a1a1a1;
-  cursor: pointer;
-  opacity: 0;
-  position: absolute;
-  right: 43px;
-}
+      .comment-text {
+        margin: 0 0 0 5px;
+        width: 370px;
+        word-wrap: break-word;
+      }
 
-.feed .comment:hover .comment--delete {
-  opacity: 1;
-}
+      .comment-delete {
+        width: 30px;
+        margin: 0;
+        font-size: 14px;
+        color: #a1a1a1;
+        cursor: pointer;
+        opacity: 0;
+        position: absolute;
+        right: 43px;
+      }
+    }
 
-.feed .comment .like {
-  width: 22px;
-  // color: #a1a1a1;
-  cursor: pointer;
-  margin-right: 15px;
-}
+    .like {
+      width: 22px;
+      // color: #a1a1a1;
+      cursor: pointer;
+      margin-right: 15px;
+    }
 
-.feed .comment .liked {
-  width: 22px;
-  color: #d24855;
-  cursor: pointer;
-  margin-right: 15px;
+    .liked {
+      width: 22px;
+      color: #d24855;
+      cursor: pointer;
+      margin-right: 15px;
+    }
+  }
+
+  .comment:hover .delete {
+    opacity: 1;
+  }
 }
 
 // .feed .comment .none {
@@ -187,37 +184,37 @@
 // }
 
 /* Comment input */
-.feeds .add {
+.add {
   display: flex;
   position: relative;
-}
 
-.feeds .add input {
-  width: 100%;
-  padding: 20px 15px;
-  border: none;
-  font-size: 16px;
-  border-top: 1px solid #e5e5e5;
-}
+  .input {
+    width: 100%;
+    padding: 20px 15px;
+    border: none;
+    font-size: 16px;
+    border-top: 1px solid #e5e5e5;
+  }
 
-.feeds .add input::placeholder {
-  color: #949494;
-}
+  .input::placeholder {
+    color: #949494;
+  }
 
-.feeds .add div {
-  position: absolute;
-  top: 5px;
-  right: 1px;
-  cursor: pointer;
-}
+  .btn {
+    position: absolute;
+    top: 5px;
+    right: 1px;
+    cursor: pointer;
 
-.feeds .add--btn {
-  color: #2e91ef;
-  opacity: 0.5;
-  width: 50px;
-  height: 50px;
-  line-height: 50px;
-  display: inline-block;
-  text-align: center;
-  background-color: white;
+    .add-btn {
+      color: #2e91ef;
+      opacity: 0.5;
+      width: 50px;
+      height: 50px;
+      line-height: 50px;
+      display: inline-block;
+      text-align: center;
+      background-color: white;
+    }
+  }
 }
