--- a/src/pages/shinung/Main/Main.scss
+++ b/src/pages/shinung/Main/Main.scss
@@ -1,6 +1,7 @@
 h1 {
   font-size: 1rem;
 }
+
 /* common */
 body {
   background-color: #fafafa;
@@ -14,6 +15,15 @@ body {
   /* background-color: red; */
 }
 
-.main--left {
+.main-left {
   margin-top: 90px;
+}
+
+.main-right {
+  width: 300px;
+  height: 500px;
+  margin-top: 140px;
+  margin-left: 25px;
+  position: sticky;
+  top: 140px;
 }
