--- a/src/pages/shinung/Main/Story/Story.scss
+++ b/src/pages/shinung/Main/Story/Story.scss
@@ -1,4 +1,6 @@
-/* Main---right Story */
+/* Main--right Story */
+$textColor: #949494;
+
 .story {
   width: 300px;
   height: 250px;
@@ -6,48 +8,52 @@
   margin-top: 20px;
   background-color: #ffffff;
   overflow: auto;
+
+  .info {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px;
+
+    span:nth-child(1) {
+      color: $textColor;
+      cursor: pointer;
+    }
+
+    span:nth-child(2) {
+      font-weight: bold;
+      color: black;
+      cursor: pointer;
+    }
+  }
+
+  .story-user {
+    display: flex;
+    align-items: center;
+    margin-left: 15px;
+    margin-bottom: 10px;
+
+    img {
+      width: 48px;
+      border-radius: 50%;
+    }
+
+    .story-info {
+      p {
+        margin: 0 0 0 10px;
+      }
+
+      .story-id {
+        font-weight: bold;
+      }
+
+      .story-name {
+        color: $textColor;
+      }
+    }
+  }
 }
 
 ::-webkit-scrollbar {
   display: none;
-}
-
-.story .story--info {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 15px;
-}
-
-.story .story--info span:nth-child(1) {
-  color: #949494;
-}
-
-.story .story--info span:nth-child(2) {
-  font-weight: bold;
-  color: black;
-}
-
-.story .story--user {
-  display: flex;
-  align-items: center;
-  margin-left: 15px;
-  margin-bottom: 10px;
-}
-
-.story .story--user img {
-  width: 48px;
-  border-radius: 50%;
-}
-
-.story .story--user--info p {
-  margin: 0 0 0 10px;
-}
-
-.story .story--user--id {
-  font-weight: bold;
-}
-
-.story .story--user--name {
-  color: #949494;
 }
