--- a/src/pages/shinung/Main/User/User.scss
+++ b/src/pages/shinung/Main/User/User.scss
@@ -1,29 +1,31 @@
-/* Main--right user */
-.user {
+/* Main-right user */
+.right {
   display: flex;
   align-items: center;
   justify-content: flex-start;
-}
 
-.user img {
-  width: 60px;
-  border-radius: 50%;
-  margin-left: 5px;
-}
+  img {
+    width: 60px;
+    border-radius: 50%;
+    margin-left: 5px;
+    cursor: pointer;
+  }
 
-.user--info {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  margin-left: 17px;
-  margin-top: 10px;
-  cursor: pointer;
-}
+  .right-info {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-left: 17px;
+    margin-top: 10px;
+    cursor: pointer;
 
-.user--id {
-  font-weight: bold;
-}
+    .right-id {
+      font-weight: bold;
+      margin-bottom: 3px;
+    }
 
-.user--name {
-  color: #949494;
+    .right-name {
+      color: #949494;
+    }
+  }
 }
