--- a/src/pages/shinung/Main/Feed/Feed.scss
+++ b/src/pages/shinung/Main/Feed/Feed.scss
@@ -4,217 +4,219 @@
   margin-top: 50px;
   border: 1px solid #e5e5e5;
   background-color: white;
-}
 
-/* Feed */
-.feed-user {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px;
-  height: 60px;
+  .feed {
+    /* Feed */
+    .feed-user {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+      padding: 10px;
+      height: 60px;
 
-  .user-info {
-    display: flex;
-    align-items: center;
+      .user-info {
+        display: flex;
+        align-items: center;
 
-    .user-profile {
-      width: 40px;
-      border-radius: 50%;
-      margin: 0 10px 0 5px;
+        .user-profile {
+          width: 40px;
+          border-radius: 50%;
+          margin: 0 10px 0 5px;
+        }
+      }
+
+      .feed-etc {
+        width: 15px;
+        margin-right: 10px;
+        margin-top: 0px;
+      }
     }
-  }
 
-  .feed-etc {
-    width: 15px;
-    margin-right: 10px;
-    margin-top: 0px;
-  }
-}
-
-.user-name {
-  font-weight: bold;
-  cursor: pointer;
-  margin-top: 5px;
-}
-
-/* Feed image */
-.feedImage {
-  width: 598px;
-  height: 600px;
-  margin-bottom: -4px;
-}
-
-/* Feed evaluation */
-.evaluation {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 55px;
-  margin-bottom: -5px;
-
-  div img {
-    width: 23px;
-    margin-left: 13px;
-    cursor: pointer;
-  }
-
-  .bookmark {
-    width: 23px;
-    margin-left: 12px;
-    cursor: pointer;
-    margin-right: 13px;
-  }
-}
-
-/* Feed like */
-.howmany {
-  display: flex;
-  align-items: center;
-  height: 30px;
-  padding-bottom: 5px;
-
-  img {
-    width: 25px;
-    border-radius: 50%;
-    border: 1px solid #e5e5e5;
-    margin: 0 5px 0 13px;
-    cursor: pointer;
-  }
-
-  .howmany-text {
-    margin: 5px 0 0 2px;
-
-    a {
-      text-decoration: none;
-      font-weight: bold;
-      color: black;
-    }
-  }
-}
-
-/* Content */
-.content {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  padding: 8px 0;
-  background-color: white;
-
-  div {
-    .content-user {
-      margin: 0 0 0 15px;
+    .user-name {
       font-weight: bold;
       cursor: pointer;
+      margin-top: 5px;
     }
 
-    .content-text {
-      margin-left: 5px;
+    /* Feed image */
+    .feedImage {
+      width: 598px;
+      height: 600px;
+      margin-bottom: -4px;
     }
-  }
-}
 
-/* Comment */
-.comments {
-  padding: 0;
-  margin: 0 0 5px 0;
+    /* Feed evaluation */
+    .evaluation {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      height: 55px;
+      margin-bottom: -5px;
 
-  .comment {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    background-color: white;
-    list-style: none;
-    position: relative;
+      div img {
+        width: 23px;
+        margin-left: 13px;
+        cursor: pointer;
+      }
 
-    div {
+      .bookmark {
+        width: 23px;
+        margin-left: 12px;
+        cursor: pointer;
+        margin-right: 13px;
+      }
+    }
+
+    /* Feed like */
+    .howmany {
       display: flex;
       align-items: center;
       height: 30px;
+      padding-bottom: 5px;
 
-      .comment-user {
-        margin: 0 0 0 15px;
-        font-weight: bold;
+      img {
+        width: 25px;
+        border-radius: 50%;
+        border: 1px solid #e5e5e5;
+        margin: 0 5px 0 13px;
         cursor: pointer;
       }
 
-      .comment-text {
-        margin: 0 0 0 5px;
-        width: 370px;
-        word-wrap: break-word;
-      }
+      .howmany-text {
+        margin: 5px 0 0 2px;
 
-      .comment-delete {
-        width: 30px;
-        margin: 0;
-        font-size: 14px;
-        color: #a1a1a1;
-        cursor: pointer;
-        opacity: 0;
-        position: absolute;
-        right: 43px;
+        a {
+          text-decoration: none;
+          font-weight: bold;
+          color: black;
+        }
       }
     }
 
-    .like {
-      width: 22px;
-      // color: #a1a1a1;
-      cursor: pointer;
-      margin-right: 15px;
-    }
-
-    .liked {
-      width: 22px;
-      color: #d24855;
-      cursor: pointer;
-      margin-right: 15px;
-    }
-  }
-
-  .comment:hover .delete {
-    opacity: 1;
-  }
-}
-
-// .feed .comment .none {
-//   display: none;
-// }
-
-/* Comment input */
-.add {
-  display: flex;
-  position: relative;
-
-  .input {
-    width: 100%;
-    padding: 20px 15px;
-    border: none;
-    font-size: 16px;
-    border-top: 1px solid #e5e5e5;
-  }
-
-  .input::placeholder {
-    color: #949494;
-  }
-
-  .btn {
-    position: absolute;
-    top: 5px;
-    right: 1px;
-    cursor: pointer;
-
-    .add-btn {
-      color: #2e91ef;
-      opacity: 0.5;
-      width: 50px;
-      height: 50px;
-      line-height: 50px;
-      display: inline-block;
-      text-align: center;
+    /* Content */
+    .content {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      width: 100%;
+      padding: 8px 0;
       background-color: white;
+
+      div {
+        .content-user {
+          margin: 0 0 0 15px;
+          font-weight: bold;
+          cursor: pointer;
+        }
+
+        .content-text {
+          margin-left: 5px;
+        }
+      }
+    }
+
+    /* Comment */
+    .comments {
+      padding: 0;
+      margin: 0 0 5px 0;
+
+      .comment {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        background-color: white;
+        list-style: none;
+        position: relative;
+
+        div {
+          display: flex;
+          align-items: center;
+          height: 30px;
+
+          .comment-user {
+            margin: 0 0 0 15px;
+            font-weight: bold;
+            cursor: pointer;
+          }
+
+          .comment-text {
+            margin: 0 0 0 5px;
+            width: 370px;
+            word-wrap: break-word;
+          }
+
+          .comment-delete {
+            width: 30px;
+            margin: 0;
+            font-size: 14px;
+            color: #a1a1a1;
+            cursor: pointer;
+            opacity: 0;
+            position: absolute;
+            right: 43px;
+          }
+        }
+
+        .like {
+          width: 22px;
+          // color: #a1a1a1;
+          cursor: pointer;
+          margin-right: 15px;
+        }
+
+        .liked {
+          width: 22px;
+          color: #d24855;
+          cursor: pointer;
+          margin-right: 15px;
+        }
+      }
+
+      .comment:hover .delete {
+        opacity: 1;
+      }
+    }
+
+    // .feed .comment .none {
+    //   display: none;
+    // }
+
+    /* Comment input */
+    .add {
+      display: flex;
+      position: relative;
+
+      .input {
+        width: 100%;
+        padding: 20px 15px;
+        border: none;
+        font-size: 16px;
+        border-top: 1px solid #e5e5e5;
+      }
+
+      .input::placeholder {
+        color: #949494;
+      }
+
+      .btn {
+        position: absolute;
+        top: 5px;
+        right: 1px;
+        cursor: pointer;
+
+        .add-btn {
+          color: #2e91ef;
+          opacity: 0.5;
+          width: 50px;
+          height: 50px;
+          line-height: 50px;
+          display: inline-block;
+          text-align: center;
+          background-color: white;
+        }
+      }
     }
   }
 }
