Modify: 검색 아이콘 inline style을 class로 변경

--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -9,6 +9,10 @@
     width: 100%;
   }
 
+  .hidden {
+    display: none;
+  }
+
   nav {
     @extend %nav-container;
     border-bottom: 1px solid $gray2;
