--- a/src/pages/jumiLee/Main/Footer/Footer.scss
+++ b/src/pages/jumiLee/Main/Footer/Footer.scss
@@ -5,11 +5,11 @@
   color: #c5c5c5;
 }
 
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
+// * {
+//   box-sizing: border-box;
+//   margin: 0;
+//   padding: 0;
+// }
 
 .footer::-webkit-scrollbar {
   display: none;
