--- a/src/pages/sunyeongSin/Login/Login.scss
+++ b/src/pages/sunyeongSin/Login/Login.scss
@@ -42,6 +42,7 @@
     color: white;
     border-style: none;
     border-radius: 5px;
+    text-align: center;
   }
 
   .login-button-active {
@@ -52,6 +53,7 @@
     color: white;
     border-style: none;
     border-radius: 5px;
+    text-align: center;
   }
 
   .forget-password {
