--- a/src/pages/sunyeongSin/Main/Article/Section/Comment/Comment.scss
+++ b/src/pages/sunyeongSin/Main/Article/Section/Comment/Comment.scss
@@ -5,18 +5,32 @@
   margin-top: 5px;
   margin-right: 10px;
   padding-left: 10px;
-}
 
-.feed-comment > span {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 5px;
-}
+  span {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 4px;
+  }
 
-.isLike {
-  color: red;
-}
-.feed-commnet-delete-button {
-  border-style: none;
-  background-color: transparent;
+  strong {
+    margin-right: 5px;
+    font-weight: 700;
+  }
+
+  .isLike {
+    color: red;
+  }
+
+  div {
+    width: 40px;
+    margin-right: 3px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
+
+  .feed-commnet-delete-button {
+    border-style: none;
+    background-color: transparent;
+  }
 }
