--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -1,4 +1,4 @@
-@import '../../styles/common.scss';
+@import '../../styles/variables.scss';
 
 /* nav */
 .Nav {
@@ -25,7 +25,6 @@
       }
 
       display: flex;
-      flex-direction: row;
       align-items: center;
       justify-content: space-between;
       height: $nav-height;
