--- a/src/pages/shinung/Main/Feed/Feed.scss
+++ b/src/pages/shinung/Main/Feed/Feed.scss
@@ -174,7 +174,7 @@
         }
       }
 
-      .comment:hover .delete {
+      .comment:hover .comment-delete {
         opacity: 1;
       }
     }
