--- a/src/pages/shinung/Main/Feed/Feed.scss
+++ b/src/pages/shinung/Main/Feed/Feed.scss
@@ -215,6 +215,7 @@
           display: inline-block;
           text-align: center;
           background-color: white;
+          border: none;
         }
       }
     }
