:recycle: self refactoring

--- a/src/pages/sunyeongSin/Login/Login.scss
+++ b/src/pages/sunyeongSin/Login/Login.scss
@@ -20,7 +20,7 @@
     font-family: 'Lobster', cursive;
   }
 
-  .login-id {
+  .login-email {
     margin-top: 70px;
     width: 380px;
     height: 50px;
