--- a/src/pages/jumiLee/Login/Login.scss
+++ b/src/pages/jumiLee/Login/Login.scss
@@ -1,7 +1,3 @@
-* {
-  text-align: center;
-}
-
 .login {
   display: flex;
   justify-content: center;
@@ -27,6 +23,7 @@
   .westagramLogo {
     font-size: 50px;
     font-family: 'Lobster', cursive;
+    text-align: center;
   }
 
   input {
@@ -37,6 +34,10 @@
     padding: 10px;
     margin-right: 30px;
     margin-left: 30px;
+
+    &::placeholder {
+      text-align: center;
+    }
   }
   /* 같은 width길이를 맞춘건데 다를 수 있나? 전체에 속성도 줬는데
 자바랑 너무 다른것 같음  클래스 준 인풋에 적용하면 같아짐 이거뭐지..*/
@@ -69,6 +70,7 @@
     color: white;
     font-weight: bold;
     margin-bottom: 100px;
+    text-align: center;
   }
 
   .question {
